--- a/Food Recipe UI/index.html
+++ b/Food Recipe UI/index.html
@@ -63,7 +63,7 @@
                         </p>
                         <div class="card-interaction">
                             <span class="icon-wrapper">
-                                <img src="./assets/img/heart.svg" alt="">
+                                <img class="heart-icon" src="./assets/img/heart.svg" alt="">
                             </span>
                             <span class="icon-wrapper">
                                 <img src="./assets/img/arrows.svg" alt="">
@@ -82,7 +82,7 @@
                         </p>
                         <div class="card-interaction">
                             <span class="icon-wrapper">
-                                <img src="./assets/img/heart.svg" alt="">
+                                <img class="heart-icon" src="./assets/img/heart.svg" alt="">
                             </span>
                             <span class="icon-wrapper">
                                 <img src="./assets/img/arrows.svg" alt="">
