--- a/Food Recipe UI/index.html
+++ b/Food Recipe UI/index.html
@@ -44,7 +44,7 @@
 
 
                 <div class="input-search">
-                    <input type="search" name="" id="">
+                    <input clas="search-input" type="search" placeholder="Search for your query" name="" id="">
                 </div>
             </header>
             <article class="latest-recipe">
