--- a/Food Recipe UI/index.html
+++ b/Food Recipe UI/index.html
@@ -10,6 +10,8 @@
 
 <body>
     <main class="container">
+
+        <!-- First UI -->
         <section class="recipe-ui1 ui">
             <nav class="status-bar">
                 <div class="left-bar">
@@ -110,9 +112,111 @@
                     </span>
                 </div>
             </article>
-
         </section>
-        <section class="recipe-ui2 ui"></section>
+
+
+        <!-- Second UI -->
+        <section class="recipe-ui2 ui">
+            <nav class="status-bar">
+                <div class="left-bar">
+                    <p class="time">9:41</p>
+                </div>
+
+                <ul class="status-bar_icons right-bar">
+                    <li>
+                        <img src="./assets/img/network.svg" alt="cell signal">
+                    </li>
+                    <li>
+                        <img src="./assets/img/wifi-black-18dp.svg" alt="wifi on">
+                    </li>
+                    <li>
+                        <img class="battery-icon"
+                            src="https://res.cloudinary.com/dvhndpbun/image/upload/v1584276405/ios-battery-full_edit_gdwsvt.svg"
+                            alt="battery">
+                    </li>
+                </ul>
+            </nav>
+
+            <div class="recipe-splash">
+                <img src="https://res.cloudinary.com/dvhndpbun/image/upload/v1595686149/burger-chef_hq_zquvff.png"
+                    alt="">
+            </div>
+
+            <div class="recipe-details">
+                <div class="recipe-details_top">
+                    <div class="difficulty-details">
+                        <h2>
+                            Difficulty: Easy ✌
+                        </h2>
+                        <h2>17 Mins</h2>
+                    </div>
+                    <div class="prep-stages">
+                        <div class="prep-stage">
+                            <div class="prep-image_wrapper">
+                                <img src="https://res.cloudinary.com/dvhndpbun/image/upload/v1595862096/cooking_1_bzjook.png"
+                                    alt="">
+                            </div>
+                            <p>Cooking</p>
+                            <p class="prep-stage_duration">
+                                (10 Mins)
+                            </p>
+
+                        </div>
+                        <div class="prep-stage">
+                            <div class="prep-image_wrapper">
+                                <img src="https://res.cloudinary.com/dvhndpbun/image/upload/v1595862095/baking_1_ny27tk.png"
+                                    alt="">
+                            </div>
+                            <p>Baking</p>
+                            <p class="prep-stage_duration">
+                                (2 Mins)
+                            </p>
+                        </div>
+                        <div class="prep-stage">
+                            <div class="prep-image_wrapper">
+                                <img src="./assets/img/resting.svg" alt="">
+                            </div>
+                            <p>Resting</p>
+                            <p class="prep-stage_duration">
+                                (5 Mins)
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="utensils">
+                        <h3>Utensils</h3>
+                        <p class="utensils-list">
+                            Cutting board, knife, 2 bowls, fine grater, cooking spoon,
+                            Frying pan, blender, colander, paper towels, tongs
+                        </p>
+                    </div>
+                </div>
+
+                <div class="recipe-details_bottom">
+                    <div class="nutrition-details">
+                        <h4>Nutrition Per Serving</h4>
+                    </div>
+                    <div class="nutrition-columns">
+                        <div class="nutrition">
+                            <h5>Cal</h5>
+                            <p class="nutrition-amount">433</p>
+                        </div>
+                        <div class="nutrition">
+                            <h5>Protein</h5>
+                            <p class="nutrition-amount">10 G</p>
+                        </div>
+                        <div class="nutrition">
+                            <h5>Fat</h5>
+                            <p class="nutrition-amount">39 G</p>
+                        </div>
+                        <div class="nutrition">
+                            <h5>Carb</h5>
+                            <p class="nutrition-amount">20 G</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="recipe-ui3 ui"></section>
     </main>
 </body>
