--- a/Food Recipe UI/index.html
+++ b/Food Recipe UI/index.html
@@ -217,7 +217,42 @@
                 </div>
             </div>
         </section>
-        <section class="recipe-ui3 ui"></section>
+
+
+        <!-- Third UI -->
+        <section class="recipe-ui3 ui">
+            <nav class="status-bar">
+                <div class="left-bar">
+                    <p class="time">9:41</p>
+                </div>
+
+                <ul class="status-bar_icons right-bar">
+                    <li>
+                        <img src="./assets/img/network.svg" alt="cell signal">
+                    </li>
+                    <li>
+                        <img src="./assets/img/wifi-black-18dp.svg" alt="wifi on">
+                    </li>
+                    <li>
+                        <img class="battery-icon"
+                            src="https://res.cloudinary.com/dvhndpbun/image/upload/v1584276405/ios-battery-full_edit_gdwsvt.svg"
+                            alt="battery">
+                    </li>
+                </ul>
+            </nav>
+            <div class="recipe-story_splash">
+                <img src="https://res.cloudinary.com/dvhndpbun/image/upload/v1595685054/hands-hq_mfvhje.png" alt="">
+            </div>
+
+            <div class="kitchen-story">
+
+                <h1>Kitchen Story</h1>
+                <p>You don't have any story, Learn a new recipe and say it</p>
+                <div class="add-story">
+                    <img class="add-story_btn" src="./assets/img/add-icon.svg" alt="">
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
