chore: make code more readable

--- a/Food Recipe UI/index.html
+++ b/Food Recipe UI/index.html
@@ -10,14 +10,12 @@
 
 <body>
     <main class="container">
-
         <!-- First UI -->
         <section class="recipe-ui1 ui">
             <nav class="status-bar">
                 <div class="left-bar">
                     <p class="time">9:41</p>
                 </div>
-
                 <ul class="status-bar_icons right-bar">
                     <li>
                         <img src="./assets/img/network.svg" alt="cell signal">
@@ -32,27 +30,17 @@
                     </li>
                 </ul>
             </nav>
-
             <header>
-
                 <div class="menu-icon-wrapper">
                     <img src="./assets/img/kebab-menu.png" alt="">
                 </div>
-
-
-                <h1 class="header-text">
-                    What would you like 2 cook?
-                </h1>
-
-
+                <h1 class="header-text"> What would you like 2 cook? </h1>
                 <div class="input-search">
                     <input clas="search-input" type="search" placeholder="Search for your query" name="" id="">
                 </div>
             </header>
             <article class="latest-recipe">
-                <h2>
-                    Latest Recipes
-                </h2>
+                <h2> Latest Recipes </h2>
                 <div class="latest--recipe_cards">
                     <div class="recipe-card">
                         <div class="card-image_wrapper">
@@ -60,9 +48,7 @@
                                 alt="">
                         </div>
                         <h3 class="food-name">Special Burger</h3>
-                        <p class="time-duration">
-                            2 Lessons | 3h 12m
-                        </p>
+                        <p class="time-duration"> 2 Lessons | 3h 12m </p>
                         <div class="card-interaction">
                             <span class="icon-wrapper">
                                 <img class="heart-icon" src="./assets/img/heart.svg" alt="">
@@ -70,7 +56,6 @@
                             <span class="icon-wrapper">
                                 <img src="./assets/img/arrows.svg" alt="">
                             </span>
-
                         </div>
                     </div>
                     <div class="recipe-card">
@@ -79,9 +64,7 @@
                                 alt="">
                         </div>
                         <h3 class="food-name">Filter Coffee</h3>
-                        <p class="time-duration">
-                            5 Lessons | 6h 12m
-                        </p>
+                        <p class="time-duration"> 5 Lessons | 6h 12m </p>
                         <div class="card-interaction">
                             <span class="icon-wrapper">
                                 <img class="heart-icon" src="./assets/img/heart.svg" alt="">
@@ -89,24 +72,17 @@
                             <span class="icon-wrapper">
                                 <img src="./assets/img/arrows.svg" alt="">
                             </span>
-
                         </div>
                     </div>
                     <div class="recipe-card">
-
                     </div>
                 </div>
             </article>
-
             <article class="week-recipe">
-                <h4>
-                    Recipe of the week
-                </h4>
-
+                <h4> Recipe of the week </h4>
                 <div class="week-image_wrapper">
                     <img src="https://res.cloudinary.com/dvhndpbun/image/upload/v1595687587/chef-cheese_hpszne.png"
                         alt="">
-
                     <span class="version-num">
                         <p>4.9</p>
                     </span>
@@ -121,7 +97,6 @@
                 <div class="left-bar">
                     <p class="time">9:41</p>
                 </div>
-
                 <ul class="status-bar_icons right-bar">
                     <li>
                         <img src="./assets/img/network.svg" alt="cell signal">
@@ -136,18 +111,14 @@
                     </li>
                 </ul>
             </nav>
-
             <div class="recipe-splash">
                 <img src="https://res.cloudinary.com/dvhndpbun/image/upload/v1595686149/burger-chef_hq_zquvff.png"
                     alt="">
             </div>
-
             <div class="recipe-details">
                 <div class="recipe-details_top">
                     <div class="difficulty-details">
-                        <h2>
-                            Difficulty: Easy ✌
-                        </h2>
+                        <h2> Difficulty: Easy ✌ </h2>
                         <h2>17 Mins</h2>
                     </div>
                     <div class="prep-stages">
@@ -157,10 +128,7 @@
                                     alt="">
                             </div>
                             <p>Cooking</p>
-                            <p class="prep-stage_duration">
-                                (10 Mins)
-                            </p>
-
+                            <p class="prep-stage_duration"> (10 Mins) </p>
                         </div>
                         <div class="prep-stage">
                             <div class="prep-image_wrapper">
@@ -168,30 +136,22 @@
                                     alt="">
                             </div>
                             <p>Baking</p>
-                            <p class="prep-stage_duration">
-                                (2 Mins)
-                            </p>
+                            <p class="prep-stage_duration"> (2 Mins) </p>
                         </div>
                         <div class="prep-stage">
                             <div class="prep-image_wrapper">
                                 <img src="./assets/img/resting.svg" alt="">
                             </div>
                             <p>Resting</p>
-                            <p class="prep-stage_duration">
-                                (5 Mins)
-                            </p>
+                            <p class="prep-stage_duration"> (5 Mins) </p>
                         </div>
                     </div>
-
                     <div class="utensils">
                         <h3>Utensils</h3>
-                        <p class="utensils-list">
-                            Cutting board, knife, 2 bowls, fine grater, cooking spoon,
-                            Frying pan, blender, colander, paper towels, tongs
-                        </p>
+                        <p class="utensils-list"> Cutting board, knife, 2 bowls, fine grater, cooking spoon, Frying pan,
+                            blender, colander, paper towels, tongs </p>
                     </div>
                 </div>
-
                 <div class="recipe-details_bottom">
                     <div class="nutrition-details">
                         <h4>Nutrition Per Serving</h4>
@@ -225,7 +185,6 @@
                 <div class="left-bar">
                     <p class="time">9:41</p>
                 </div>
-
                 <ul class="status-bar_icons right-bar">
                     <li>
                         <img src="./assets/img/network.svg" alt="cell signal">
@@ -243,9 +202,7 @@
             <div class="recipe-story_splash">
                 <img src="https://res.cloudinary.com/dvhndpbun/image/upload/v1595685054/hands-hq_mfvhje.png" alt="">
             </div>
-
             <div class="kitchen-story">
-
                 <h1>Kitchen Story</h1>
                 <p>You don't have any story, Learn a new recipe and say it</p>
                 <div class="add-story">
