feat: add time script

--- a/Food Recipe UI/index.html
+++ b/Food Recipe UI/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Food Recipe UI</title>
+    <script src="./assets/js/time.js" defer></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -14,7 +15,7 @@
         <section class="recipe-ui1 ui">
             <nav class="status-bar">
                 <div class="left-bar">
-                    <p class="time">9:41</p>
+                    <p class="time"></p>
                 </div>
                 <ul class="status-bar_icons right-bar">
                     <li>
@@ -95,7 +96,7 @@
         <section class="recipe-ui2 ui">
             <nav class="status-bar">
                 <div class="left-bar">
-                    <p class="time">9:41</p>
+                    <p class="time"></p>
                 </div>
                 <ul class="status-bar_icons right-bar">
                     <li>
@@ -183,7 +184,7 @@
         <section class="recipe-ui3 ui">
             <nav class="status-bar">
                 <div class="left-bar">
-                    <p class="time">9:41</p>
+                    <p class="time"></p>
                 </div>
                 <ul class="status-bar_icons right-bar">
                     <li>
