--- a/Sign Up Page/index.html
+++ b/Sign Up Page/index.html
@@ -9,7 +9,11 @@
 </head>
 
 <body>
-    <p>Hello</p>
+    <main class="container">
+        <div class="form-container">
+
+        </div>
+    </main>
 </body>
 
 </html>
