feat: add font style

--- a/Job Seeker - Dashboard/index.html
+++ b/Job Seeker - Dashboard/index.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Dashboard</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <p>Hello</p>
+    <h1>Cari Kerja</h1>
+    <p>Hello, testing the font</p>
 </body>
 
 </html>
