--- a/Landing Page 2/index.html
+++ b/Landing Page 2/index.html
@@ -36,7 +36,10 @@
                     <a href="" class="btn hero-btn">Browse courses</a>
                 </div>
 
-                <div class="right-hero"></div>
+                <div class="right-hero">
+                    <img src="https://api-lunacy.icons8.com/api/assets/e64fa8b6-697f-4f5c-a1be-e20934896c90/Group-21.png"
+                        alt="">
+                </div>
             </section>
             <footer class="footer">
                 <div class="footer-cta-message"></div>
