--- a/Landing Page 2/index.html
+++ b/Landing Page 2/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <title>Landing Page</title>
-    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -14,9 +14,8 @@
         <nav>
             <div class="left-nav">
                 <div class="logo-wrapper">
-                    <img src="./assets/img/logo.svg" alt="" class="logo">
+                    <img src="./assets/img/logo.svg" alt="" class="logo" />
                 </div>
-
             </div>
             <div class="right-nav">
                 <div class="nav-links">
@@ -31,19 +30,35 @@
                 <div class="left-hero">
                     <h1>Web development courses</h1>
 
-                    <p>Learn to code with an easy to understand, project based learning path</p>
+                    <p>
+                        Learn to code with an easy to understand, project based learning
+                        path
+                    </p>
 
                     <a href="" class="btn hero-btn">Browse courses</a>
                 </div>
 
                 <div class="right-hero">
                     <img src="https://api-lunacy.icons8.com/api/assets/e64fa8b6-697f-4f5c-a1be-e20934896c90/Group-21.png"
-                        alt="">
+                        alt="" />
                 </div>
             </section>
             <footer class="footer">
-                <div class="footer-cta-message"></div>
-                <div class="footer-input"></div>
+                <div class="footer-content">
+                    <div class="footer-cta-message">
+                        <div class="icon-wrapper">
+                            <img src="./assets/img/message-icon.svg" alt="" class="message-icon" />
+                        </div>
+                        <h2>Join the Traversy Media mailing list</h2>
+                        <p>Sign up to the newsletter and be the first one to know about new courses or special offers.
+                        </p>
+                    </div>
+                    <div class="footer-input">
+                        <input type="email" name="" id="" placeholder="Enter your email">
+                        <a href="" class="btn footer-btn">Subscribe</a>
+                        <p>We won’t spam. Pinky promise!</p>
+                    </div>
+                </div>
             </footer>
         </main>
     </header>
