--- a/Subscribe/index.html
+++ b/Subscribe/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Subscribe</title>
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -17,8 +18,10 @@
         </div>
 
         <div class="subscribe-card-input">
-            <input type="email" name="" id="">
-            <a href="">SEND</a>
+            <input type="email" name="" id="" placeholder="Enter your email address">
+            <a class="send-btn" href="">SEND</a>
+        </div>
+        <div class="subscribe-card-agreement">
             <input type="checkbox" name="" id="">
             <p>I agree to my email address being stored and used to receive monthly newsletter.</p>
         </div>
