feat: add card contents

--- a/Request Money UI/index.html
+++ b/Request Money UI/index.html
@@ -14,28 +14,57 @@
         <div class="card-title">
             <h1>Request money</h1>
         </div>
+
         <div class="card-description">
             <p>Request money from anyone with an email address, and get paid quickly.</p>
         </div>
+
+
         <div class="card-sub_cards">
             <div class="sub-card">
                 <div class="sub-card_icon">
-
+                    <img src="./assets/img/email-icon.svg" alt="email icon" srcset="">
                 </div>
-                <div class="sub-card_description"></div>
+                <div class="sub-card_description">
+                    <div class="description-number">
+                        <p>1</p>
+                    </div>
+                    <div class="description-text">
+                        <p>Enter your email address and select a currency</p>
+                    </div>
+                </div>
             </div>
             <div class="sub-card">
                 <div class="sub-card_icon">
-
+                    <img src="./assets/img/note-icon.svg" alt="note icon" srcset="">
                 </div>
-                <div class="sub-card_description"></div>
+                <div class="sub-card_description">
+                    <div class="description-number">
+                        <p>2</p>
+                    </div>
+                    <div class="description-text">
+                        <p>Add a note to personalize the request</p>
+                    </div>
+                </div>
             </div>
             <div class="sub-card">
                 <div class="sub-card_icon">
-
+                    <img src="./assets/img/money-icon.svg" alt="money icon" srcset="">
                 </div>
-                <div class="sub-card_description"></div>
+                <div class="sub-card_description">
+                    <div class="description-number">
+                        <p>3</p>
+                    </div>
+                    <div class="description-text">
+                        <p>See the money within moments in your account</p>
+                    </div>
+                </div>
             </div>
+        </div>
+
+
+        <div class="card-cta">
+            <a href="" class="btn">Learn More</a>
         </div>
     </div>
 </body>
